--- a/app/res/layout/select_install_mode_fragment.xml
+++ b/app/res/layout/select_install_mode_fragment.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    android:id="@+id/screen_first_start_main"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:SquareButtonWithText="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/screen_first_start_main"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/cc_core_bg"
@@ -119,6 +118,7 @@
                             SquareButtonWithText:textColor="@color/white"/>
                     </FrameLayout>
                 </LinearLayout>
+
                 <LinearLayout
                     android:id="@+id/screen_first_start_second_row"
                     android:layout_width="match_parent"
