--- a/app/res/values/colors.xml
+++ b/app/res/values/colors.xml
@@ -143,7 +143,7 @@
     <color name="red_500">#F44336</color>
     <color name="red_700">#D32F2F</color>
     <color name="red_900">#B71C1C</color>
-    
+
     <!-- Button colors -->
     <color name="button_disabled">@color/cc_neutral_bg</color>
     <color name="button_primary_color">@color/cc_brand_color</color>
@@ -157,7 +157,6 @@
     <color name="barcode_button_color">#3843D0</color>
     <color name="url_button_color">#8EA1FF</color>
     <color name="square_button_icon_color">#FFFFFF</color>
-
 
     <!-- Progress bar colors -->
     <color name="progress_bar_bg">#66000000</color>
@@ -180,8 +179,6 @@
     <color name="connect_secondary_text">#6B7280</color>
     <color name="connect_warning_color">#EA6944</color>
     <color name="connect_subtext_80">#50080B3F</color>
-
-
     <color name="connect_text_color">#374151</color>
     <color name="connect_subtext_color">#9CA3AF</color>
     <color name="connect_grey">#9A9A9A</color>
@@ -191,11 +188,12 @@
     <color name="connect_green">#16A085</color>
     <color name="connect_light_green">#E6F5E5</color>
     <color name="connect_red">#EA6944</color>
-
     <color name="connect_light_grey_transparent">#1AD9D9D9</color>
     <color name="connect_orange_yellow">#FFEFD5</color>
     <color name="connect_tealish_blue_color">#E7EAF8</color>
     <color name="connect_dark_grey">#9CA3AF</color>
     <color name="connect_un_fill_progress">#ebecfa</color>
-
+    <color name="connect_message_receiver_bg">#5C6FD0</color>
+    <color name="connect_message_sender_bg">#F1F5F9</color>
+    <color name="connect_message_sender_text_color">#334155</color>
 </resources>
