--- a/app/res/values/themes.xml
+++ b/app/res/values/themes.xml
@@ -39,6 +39,44 @@
         <item name="materialCalendarTheme">@style/ThemeOverlay.MaterialComponents.MaterialCalendar</item>
     </style>
 
+    <style name="NoAppBarTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="colorPrimary">@color/cc_brand_color</item>
+        <item name="colorPrimaryDark">@color/cc_brand_text</item>
+        <item name="colorAccent">@color/cc_dark_cool_accent_color</item>
+        <item name="colorControlActivated">@color/cc_dark_cool_accent_color</item>
+        <item name="android:textColorSecondary">@color/cc_neutral_text</item>
+        <item name="android:textColorPrimary">@color/cc_core_text</item>
+        <item name="buttonStyle">@style/Commcare.Button.Primary</item>
+        <item name="buttonBarButtonStyle">@style/Commcare.Button.Primary</item>
+        <item name="android:textAppearanceButton">@style/TextAppearance.AppCompat.Medium</item>
+        <item name="android:colorBackground">@color/cc_core_bg</item>
+        <item name="detail_odd_row_color">@color/cc_neutral_bg</item>
+        <item name="detail_even_row_color">@color/transparent</item>
+        <item name="entity_view_header_background_color">@color/cc_brand_text</item>
+        <item name="entity_view_header_text_color">@color/cc_core_bg</item>
+        <item name="drawer_pulldown_text_color">@color/white</item>
+        <item name="drawer_pulldown_even_row_color">@color/cc_brand_bg</item>
+        <item name="drawer_pulldown_odd_row_color">@color/drawer_pulldown_odd_row_color</item>
+        <item name="actionBarStyle">@style/ActionBar</item>
+        <item name="actionOverflowButtonStyle">@style/OverflowButton</item>
+        <item name="android:textViewStyle">@style/AppTheme.Widget.TextView</item>
+        <item name="android:textSize">@dimen/text_medium</item>
+        <item name="menu_tile_title_text_color">@color/cc_brand_bg</item>
+        <item name="entity_select_title_text_color">@color/cc_light_warm_accent_text</item>
+        <item name="filter_select_background_color">@color/cc_brand_text</item>
+        <item name="filter_select_text_color">@color/cc_light_warm_accent_text</item>
+        <item name="android:listViewStyle">@style/fading_edge</item>
+        <item name="android:scrollViewStyle">@style/fading_edge</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:dropDownListViewStyle">@style/dropDownListView</item>
+        <item name="android:statusBarColor">@color/connect_status_bar_color</item>
+
+        <!--  Material Components styling that can be removed when we migrate to a material component theme from the bridge theme-->
+        <item name="materialCalendarStyle">@style/Widget.MaterialComponents.MaterialCalendar</item>
+        <item name="materialCalendarFullscreenTheme">@style/ThemeOverlay.MaterialComponents.MaterialCalendar.Fullscreen</item>
+        <item name="materialCalendarTheme">@style/ThemeOverlay.MaterialComponents.MaterialCalendar</item>
+    </style>
+
     <style name="AppBaseTheme" parent="CommonTheme" />
 
     <style name="PreferenceTheme" parent="AppBaseTheme">
@@ -85,7 +123,7 @@
     </style>
 
     <style name="OverflowButton" parent="Widget.AppCompat.Light.ActionButton.Overflow">
-        <item name="android:src">@drawable/ic_action_overflow</item>
+        <item name="android:src">@drawable/ic_connect_action_overflow</item>
     </style>
 
     <style name="Theme.LightSliding" parent="@android:style/Theme.Light">
