--- a/app/res/layout/fragment_signup.xml
+++ b/app/res/layout/fragment_signup.xml
@@ -12,7 +12,8 @@
             android:id="@+id/firstLayout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/ll_recover"
+            app:layout_constraintTop_toTopOf="parent"
             android:orientation="vertical">
 
         <LinearLayout
