--- a/app/res/navigation/nav_graph_connectid.xml
+++ b/app/res/navigation/nav_graph_connectid.xml
@@ -162,6 +162,10 @@
             android:name="password"
             app:argType="string"
             app:nullable="true" />
+        <argument
+            android:name="isDismissible"
+            android:defaultValue="true"
+            app:argType="boolean" />
     </dialog>
 
     <fragment
