--- a/app/res/navigation/nav_graph_connectid.xml
+++ b/app/res/navigation/nav_graph_connectid.xml
@@ -166,7 +166,7 @@
             app:argType="string"
             app:nullable="true" />
         <argument
-            android:name="isDismissible"
+            android:name="isCancellable"
             android:defaultValue="true"
             app:argType="boolean" />
     </dialog>
