--- a/app/res/drawable/ic_connect_yellow_dot.xml
+++ b/app/res/drawable/ic_connect_yellow_dot.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="6">
   <path
       android:pathData="M3,3m-3,0a3,3 0,1 1,6 0a3,3 0,1 1,-6 0"
-      android:fillColor="#EABA13"/>
+      android:fillColor="@color/connect_yellow_dot"/>
 </vector>
