--- a/app/res/drawable/connect_rounded_corner_lighter_grey.xml
+++ b/app/res/drawable/connect_rounded_corner_lighter_grey.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
     <solid android:color="@color/connect_lighter_grey" />
     <corners android:radius="16dp" />
 </shape>
