--- a/app/res/drawable/ic_connect_delivery_approved.xml
+++ b/app/res/drawable/ic_connect_delivery_approved.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
@@ -5,5 +6,5 @@
     android:viewportHeight="24">
   <path
       android:pathData="M9,16.17L4.83,12L3.41,13.41L9,19L21,7L19.59,5.59L9,16.17Z"
-      android:fillColor="#16A085"/>
+      android:fillColor="@color/connect_delivery_approved"/>
 </vector>
