--- a/app/res/drawable/ic_connect_message_edittext_bg_24_border.xml
+++ b/app/res/drawable/ic_connect_message_edittext_bg_24_border.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/connect_message_sender_bg" />
-    <corners android:radius="50dp" />
+    <corners android:radius="@dimen/connect_message_input_corner_radius" />
     <stroke
-        android:width="0.5dp"
+        android:width="@dimen/connect_message_input_stroke_width"
         android:color="@color/connect_divider_color" />
 </shape>
