--- a/app/res/drawable/ic_connect_message_receiver_edge.xml
+++ b/app/res/drawable/ic_connect_message_receiver_edge.xml
@@ -1,4 +1,5 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:autoMirrored="true"
     android:width="8dp"
     android:height="8dp"
     android:viewportWidth="8"
