--- a/app/res/drawable/ic_connect_pager_indicator.xml
+++ b/app/res/drawable/ic_connect_pager_indicator.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:gravity="center">
         <shape>
             <size
@@ -11,7 +10,7 @@
                 android:topLeftRadius="5dp"
                 android:topRightRadius="5dp" />
 
-            <solid android:color="#FF0000" />
+            <solid android:color="@color/connect_pager_indicator" />
         </shape>
     </item>
 </layer-list>
