--- a/app/res/drawable/ic_connect_payment_transferred.xml
+++ b/app/res/drawable/ic_connect_payment_transferred.xml
@@ -3,11 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <group>
-    <clip-path
-        android:pathData="M0,0h24v24h-24z"/>
     <path
         android:pathData="M7.154,19.49L2.5,14.837L7.154,10.183L8.208,11.252L5.373,14.087H12.654V15.587H5.373L8.208,18.421L7.154,19.49ZM16.846,13.808L15.792,12.738L18.627,9.904H11.346V8.404H18.627L15.792,5.569L16.846,4.5L21.5,9.154L16.846,13.808Z"
-        android:fillColor="#ffffff"/>
-  </group>
+        android:fillColor="@android:color/white"/>
 </vector>
