--- a/app/res/drawable/rounded_top_corners.xml
+++ b/app/res/drawable/rounded_top_corners.xml
@@ -1,4 +1,4 @@
-<!-- res/drawable/rounded_top_corners.xml -->
+<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/white" />
     <corners android:topLeftRadius="16dp" android:topRightRadius="16dp" />
