--- a/app/res/drawable/shape_connect_message_receiver_bg.xml
+++ b/app/res/drawable/shape_connect_message_receiver_bg.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <solid android:color="@color/connect_message_receiver_bg" />
     <corners
-        android:bottomLeftRadius="16dp"
-        android:bottomRightRadius="16dp"
-        android:topRightRadius="16dp" />
+        android:bottomLeftRadius="@dimen/connect_message_corner_radius"
+        android:bottomRightRadius="@dimen/connect_message_corner_radius"
+        android:topRightRadius="@dimen/connect_message_corner_radius" />
 </shape>
