--- a/app/res/values/attrs.xml
+++ b/app/res/values/attrs.xml
@@ -14,20 +14,15 @@
     <attr name="menu_tile_title_text_color" format="reference" />
     <attr name="entity_select_title_text_color" format="reference" />
 
-    <attr name="backgroundColor" format="reference|color" />
-    <attr name="subtitle" format="string" />
-    <attr name="img" format="reference" />
-    <attr name="textColor" format="reference|color" />
-
     <declare-styleable name="ShrinkingLinearLayout">
         <attr name="shrinkable_view" format="reference" />
     </declare-styleable>
 
     <declare-styleable name="CustomButtonWithText">
-        <attr name="backgroundColor" />
-        <attr name="subtitle" />
-        <attr name="img" />
-        <attr name="textColor" />
+        <attr name="backgroundColor" format="color"  />
+        <attr name="subtitle" format="string" />
+        <attr name="img" format="reference"  />
+        <attr name="textColor" format="color" />
     </declare-styleable>
 
     <declare-styleable name="ResizingTextView">
