--- a/app/res/values/styles.xml
+++ b/app/res/values/styles.xml
@@ -308,7 +308,7 @@
         <item name="android:navigationBarColor">@color/black</item>
     </style>
     <style name="TabTextStyle">
-        <item name="textAllCaps">false</item>
+        <item name="android:textAllCaps">false</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">bold</item>
     </style>
