Resolved the file rename issue and matched with master file name

--- a/app/res/menu/menu_connect.xml
+++ b/app/res/menu/menu_connect.xml
@@ -8,7 +8,7 @@
         app:showAsAction="always" />
     <item
         android:id="@+id/action_sync"
-        android:icon="@drawable/backup"
+        android:icon="@drawable/ic_backup"
         android:iconTint="@color/white"
         android:title="Menu"
         app:showAsAction="always" />
