--- a/app/res/layout/dialog_payment_confirmation.xml
+++ b/app/res/layout/dialog_payment_confirmation.xml
@@ -9,7 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:background="@color/white"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:padding="16dp">
 
         <ImageView
@@ -17,6 +17,8 @@
             android:layout_width="33dp"
             android:layout_height="33dp"
             android:src="@drawable/ic_connect_payment_status_transferred"
+            android:contentDescription="@null"
+            android:importantForAccessibility="no"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
