--- a/app/res/layout/fragment_connect_delivery_details.xml
+++ b/app/res/layout/fragment_connect_delivery_details.xml
@@ -55,6 +55,7 @@
                     android:layout_width="32dp"
                     android:layout_height="32dp"
                     android:contentDescription="@null"
+                    android:importantForAccessibility="no"
                     android:src="@drawable/ic_connect_check_circle"
                     app:layout_constraintBottom_toBottomOf="@+id/connect_delivery_total_visits_text"
                     app:layout_constraintStart_toStartOf="parent"
@@ -78,6 +79,7 @@
                     android:layout_width="32dp"
                     android:layout_height="32dp"
                     android:contentDescription="@null"
+                    android:importantForAccessibility="no"
                     android:src="@drawable/ic_connect_check_circle"
                     app:layout_constraintBottom_toBottomOf="@+id/connect_delivery_days_text"
                     app:layout_constraintStart_toStartOf="parent"
@@ -100,6 +102,7 @@
                     android:layout_width="32dp"
                     android:layout_height="32dp"
                     android:contentDescription="@null"
+                    android:importantForAccessibility="no"
                     android:src="@drawable/ic_connect_check_circle"
                     app:layout_constraintBottom_toBottomOf="@+id/connect_delivery_max_daily_text"
                     app:layout_constraintStart_toStartOf="parent"
@@ -122,6 +125,7 @@
                     android:layout_width="32dp"
                     android:layout_height="32dp"
                     android:contentDescription="@null"
+                    android:importantForAccessibility="no"
                     android:src="@drawable/ic_connect_check_circle"
                     app:layout_constraintBottom_toBottomOf="@+id/connect_delivery_budget_text"
                     app:layout_constraintStart_toStartOf="parent"
@@ -163,7 +167,7 @@
                             android:orientation="vertical"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            android:layout_marginRight="2dp"
+                            android:layout_marginEnd="2dp"
                             app:layout_constraintEnd_toStartOf="@+id/connect_delivery_button"
                             app:layout_constraintTop_toTopOf="parent">
 
@@ -199,7 +203,7 @@
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
                             android:backgroundTint= "@color/white"
-                            android:drawableRight= "@drawable/ic_connect_arrow_forward_20px"
+                            android:drawableEnd= "@drawable/ic_connect_arrow_forward_20px"
                             android:textColor= "@color/cc_brand_color"
                             app:iconTint="@color/cc_brand_color"
                             />
