--- a/app/res/layout/fragment_connect_downloading.xml
+++ b/app/res/layout/fragment_connect_downloading.xml
@@ -20,6 +20,8 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:src="@drawable/mobile_support"
+            android:contentDescription="@null"
+            android:importantForAccessibility="no"
             />
 
         <TextView
