--- a/app/res/layout/fragment_connect_message.xml
+++ b/app/res/layout/fragment_connect_message.xml
@@ -41,7 +41,7 @@
                 android:layout_height="50dp"
                 android:id="@+id/etMessage"
                 android:background="@null"
-                android:hint="Type message"
+                android:hint="@string/connect_send_message_hint"
                 android:textColorHint="@color/black"
                 android:inputType="textMultiLine"
                 android:gravity="center_vertical"
@@ -64,6 +64,7 @@
         android:layout_height="50dp"
         android:layout_marginEnd="10dp"
         android:visibility="gone"
+        android:contentDescription="@string/connect_send_message_btn_desc"
         android:src="@drawable/ic_connect_message_send"
         app:layout_constraintBottom_toBottomOf="@+id/cardMessage"
         app:layout_constraintEnd_toEndOf="parent"
