--- a/app/res/layout-land/home_screen.xml
+++ b/app/res/layout-land/home_screen.xml
@@ -3,14 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/MainPane"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_alignParentStart="true"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentTop="true"
-    android:layout_alignParentEnd="true"
-    android:layout_alignParentRight="true"
-    android:layout_alignParentBottom="true"
     android:background="@color/white"
     android:orientation="vertical"
     android:paddingStart="@dimen/content_start"
@@ -29,16 +23,12 @@
         android:layout_marginBottom="2dp"
         android:clickable="true"
         android:focusable="true"
-        android:shadowColor="@color/connect_light_grey_transparent"
-        android:shadowDx="30"
-        android:shadowDy="30"
-        android:shadowRadius="50"
         android:visibility="gone"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="10dp"
         app:cardElevation="5dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/connect_jobs_last_update">
+        >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
