--- a/app/res/layout/home_screen.xml
+++ b/app/res/layout/home_screen.xml
@@ -95,9 +95,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/viewJobCard"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="-35dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginStart="10dp"
+                android:translationY="-35dp"
+                android:layout_marginEnd="10dp"
                 app:cardBackgroundColor="@color/connect_light_orange_color"
                 app:cardCornerRadius="15dp"
                 app:cardElevation="10dp">
@@ -139,7 +139,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/home_gridview_buttons"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_below="@+id/cvConnectMessage"
                 android:nestedScrollingEnabled="false"
                 android:scrollbars="vertical" />
