--- a/app/res/layout/item_channel.xml
+++ b/app/res/layout/item_channel.xml
@@ -34,19 +34,23 @@
                 android:layout_gravity="center"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
+                android:contentDescription="@null"
+                android:importantForAccessibility="no"
                 android:src="@drawable/ic_contact_support_30"/>
         </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/tvChannelName"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="2dp"
             android:text="Channel Name"
             android:textColor="@color/black"
             android:textSize="19sp"
             android:textStyle="bold"
+            android:layout_marginEnd="5dp"
+            app:layout_constraintEnd_toStartOf="@+id/tvLastChatTime"
             app:layout_constraintStart_toEndOf="@+id/imgChannel"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -55,13 +59,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginBottom="2dp"
+            android:layout_marginTop="2dp"
             android:text="message preview on top of the card..."
             android:textColor="@color/connect_grey"
             android:textSize="14sp"
+            android:layout_marginEnd="5dp"
             app:layout_constraintEnd_toStartOf="@+id/tvLastChatTime"
             app:layout_constraintStart_toEndOf="@+id/imgChannel"
-            app:layout_constraintBottom_toBottomOf="@+id/imgChannel" />
+            app:layout_constraintTop_toBottomOf="@+id/tvChannelName" />
 
         <TextView
             android:id="@+id/tvLastChatTime"
