--- a/app/res/layout/view_job_card.xml
+++ b/app/res/layout/view_job_card.xml
@@ -39,7 +39,7 @@
 
         <TextView
             android:id="@+id/tv_view_more"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="@string/connect_job_info_view_more"
@@ -70,6 +70,9 @@
             android:text="8:00 AM - 5:00 PM"
             android:textColor="@color/connect_dark_blue_color"
             android:textSize="16sp"
+            android:layout_marginStart="5dp"
+            android:gravity="right"
+            app:layout_constraintStart_toEndOf="@+id/tv_view_more"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvDailyVisitTitle"
             android:textStyle="bold"/>
@@ -79,12 +82,13 @@
             android:id="@+id/connect_job_end_date"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_marginTop="8dp"
-            android:gravity="end"
+            android:gravity="right"
             android:text="Complete Project by 01/31/2024"
             android:textColor="@color/connect_subtext_color"
             android:textSize="12sp"
+            android:layout_marginStart="5dp"
+            app:layout_constraintStart_toEndOf="@+id/tv_view_more"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_job_time" />
     </androidx.constraintlayout.widget.ConstraintLayout>
