Home screen visibility issue solved. Need to make it gone on xml as its visibility controlled by code at
https://github.com/dimagi/commcare-android/blob/a8818b2ac2e3e7abb14bd92cf2dcaa83ea8b5c09/app/src/org/commcare/activities/StandardHomeActivityUIController.java#L176

https://github.com/dimagi/commcare-android/blob/a8818b2ac2e3e7abb14bd92cf2dcaa83ea8b5c09/app/src/org/commcare/activities/StandardHomeActivityUIController.java#L87

--- a/app/res/layout/home_screen.xml
+++ b/app/res/layout/home_screen.xml
@@ -95,6 +95,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/viewJobCard"
+                android:visibility="gone"
                 android:layout_marginStart="10dp"
                 android:translationY="-35dp"
                 android:layout_marginEnd="10dp"
@@ -129,6 +130,7 @@
             <include
                 layout="@layout/view_progress_job_card"
                 android:id="@+id/viewJobCard"
+                android:visibility="gone"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:layout_marginEnd="10dp"
