baseline code for micro image capture pulled from micro image widget branch

--- a/app/res/values/colors.xml
+++ b/app/res/values/colors.xml
@@ -87,6 +87,7 @@
     <color name="cc_neutral_color">#685C53</color>
     <color name="cc_neutral_bg">#D6D6D4</color>
     <color name="cc_neutral_text">#373534</color>
+    <color name="cc_neutral_bg_tr">#80D6D6D4</color>
 
     <!-- Attention Positive -->
     <color name="cc_attention_positive_color">#47B700</color>
