--- a/app/res/values/attrs.xml
+++ b/app/res/values/attrs.xml
@@ -129,4 +129,11 @@
         <attr name="roundButtonTextSize" format="dimension" />
         <attr name="roundButtonIconPadding" format="dimension"/>
     </declare-styleable>
+
+    <declare-styleable name="FaceCaptureView">
+        <attr name="background_color" format="color" />
+        <attr name="face_capture_area_delimiter_color" format="color" />
+        <attr name="face_marker_color" format="color" />
+        <attr name="countdown_text_size" format="dimension" />
+    </declare-styleable>
 </resources>
