--- a/app/res/layout/home_screen.xml
+++ b/app/res/layout/home_screen.xml
@@ -81,9 +81,9 @@
 
     </androidx.cardview.widget.CardView>
 
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+<!--    <androidx.core.widget.NestedScrollView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content">-->
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -146,5 +146,5 @@
                 android:nestedScrollingEnabled="false"
                 android:scrollbars="vertical" />
         </RelativeLayout>
-    </androidx.core.widget.NestedScrollView>
+<!--    </androidx.core.widget.NestedScrollView>-->
 </LinearLayout>
