--- a/app/res/layout-land/home_screen.xml
+++ b/app/res/layout-land/home_screen.xml
@@ -81,66 +81,72 @@
 
     </androidx.cardview.widget.CardView>
 
-    <RelativeLayout
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/nsv_home_screen"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cvConnectMessage"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/viewJobCard"
-            android:visibility="gone"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="-35dp"
-            android:layout_marginRight="10dp"
-            app:cardBackgroundColor="@color/connect_light_orange_color"
-            app:cardCornerRadius="15dp"
-            app:cardElevation="10dp">
+            android:orientation="vertical">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cvConnectMessage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/viewJobCard"
+                android:visibility="gone"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="-35dp"
+                android:layout_marginRight="10dp"
+                app:cardBackgroundColor="@color/connect_light_orange_color"
+                app:cardCornerRadius="15dp"
+                app:cardElevation="10dp">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="15dp"
+                    android:orientation="horizontal"
+                    android:paddingStart="15dp"
+                    android:paddingTop="35dp"
+                    android:paddingEnd="15dp">
+
+                    <TextView
+                        android:id="@+id/tvConnectMessage"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="10dp"
+                        android:text="@string/connect_job_tile_daily_limit_description"
+                        android:textColor="@color/connect_warning_color"
+                        android:textSize="14sp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:textStyle="bold"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
+
+            <include
+                android:id="@+id/viewJobCard"
+                layout="@layout/view_progress_job_card"
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/home_gridview_buttons"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="15dp"
-                android:orientation="horizontal"
-                android:paddingStart="15dp"
-                android:paddingTop="35dp"
-                android:paddingEnd="15dp">
-
-                <TextView
-                    android:id="@+id/tvConnectMessage"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:text="@string/connect_job_tile_daily_limit_description"
-                    android:textColor="@color/connect_warning_color"
-                    android:textSize="14sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:textStyle="bold"/>
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.cardview.widget.CardView>
-
-        <include
-            android:id="@+id/viewJobCard"
-            layout="@layout/view_progress_job_card"
-            android:visibility="gone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/home_gridview_buttons"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/cvConnectMessage"
-            android:nestedScrollingEnabled="false"
-            android:scrollbars="vertical" />
-    </RelativeLayout>
+                android:layout_below="@+id/cvConnectMessage"
+                android:nestedScrollingEnabled="false"
+                android:scrollbars="vertical" />
+        </RelativeLayout>
+    </androidx.core.widget.NestedScrollView>
 
 </LinearLayout>
