-refactor name of the fragments as per personalId, created new name fragment ,updated new ccc logo

--- a/app/res/layout/screen_personalid_phone_verify.xml
+++ b/app/res/layout/screen_personalid_phone_verify.xml
@@ -16,7 +16,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="40dp"
             android:contentDescription="@null"
-            android:src="@drawable/ic_dimagi_logo" />
+            android:src="@drawable/ccc_logo_full" />
 
         <View
             android:id="@+id/divider"
