--- a/app/res/layout/fragment_recovery_code.xml
+++ b/app/res/layout/fragment_recovery_code.xml
@@ -15,7 +15,7 @@
             android:layout_marginTop="40dp"
             android:layout_centerHorizontal="true"
             android:contentDescription="@null"
-            android:src="@drawable/ic_dimagi_logo" />
+            android:src="@drawable/ccc_logo_full" />
 
         <View
             android:id="@+id/divider"
@@ -158,20 +158,6 @@
             android:gravity="start"
             android:textColor="@color/red"
             android:textSize="16sp" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/forgot_button"
-            style="@style/NegativeButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/connect_pin_error_message"
-            android:layout_alignParentLeft="true"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
-            android:gravity="start|center"
-            android:text="@string/connect_pin_verify_forgot" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/connect_pin_button"
