--- a/app/res/navigation/nav_graph_connectid.xml
+++ b/app/res/navigation/nav_graph_connectid.xml
@@ -3,71 +3,35 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph_connectid"
-    app:startDestination="@id/connectid_signup_fragment">
-    <dialog
-        android:id="@+id/connectid_phone_not_available"
-        android:name="org.commcare.fragments.connectId.ConnectIdPhoneAvailableBottomSheet"
-        android:label="fragment_connectid_phone_available_fragment"
-        tools:layout="@layout/fragment_phone_available_bottom_sheet">
-        <action
-            android:id="@+id/action_connectid_phone_not_available_to_connectid_phone_fragment"
-            app:destination="@id/connectid_signup_fragment" />
-        <argument
-            android:name="phone"
-            app:argType="string" />
-        <argument
-            android:name="callingClass"
-            app:argType="integer"
-            app:nullable="false" />
-    </dialog>
+    app:startDestination="@id/personalid_phone_fragment">
 
     <fragment
-        android:id="@+id/connectid_biometric_config"
-        android:name="org.commcare.fragments.connectId.ConnectIdBiometricConfigFragment"
+        android:id="@+id/personalid_biometric_config"
+        android:name="org.commcare.fragments.connectId.PersonalIdBiometricConfigFragment"
         android:label="fragment_connectid_biometric_config"
-        tools:layout="@layout/screen_connect_verify">
-        <action
-            android:id="@+id/action_connectid_biometric_config_to_connectid_phone_verify"
-            app:destination="@id/connectid_phone_verify"
-            app:popUpTo="@id/connectid_biometric_config" />
+        tools:layout="@layout/screen_personalid_verify">
         <action
             android:id="@+id/action_connectid_biometric_config_to_connectid_message"
-            app:destination="@id/connectid_message"
-            app:popUpTo="@id/connectid_biometric_config" />
+            app:destination="@id/personalid_message_display"
+            app:popUpTo="@id/personalid_biometric_config" />
         <argument
             android:name="callingClass"
             app:argType="integer"
             app:nullable="false" />
+        <action
+            android:id="@+id/action_personalid_biometric_config_to_personalid_otp_page"
+            app:destination="@id/personalid_otp_page" />
     </fragment>
 
     <fragment
-        android:id="@+id/connectid_phone_verify"
-        android:name="org.commcare.fragments.connectId.ConnectIdPhoneVerificationFragment"
+        android:id="@+id/personalid_otp_page"
+        android:name="org.commcare.fragments.connectId.PersonalIdPhoneVerificationFragment"
         android:label="fragment_connectid_phone_verify"
-        tools:layout="@layout/screen_connect_phone_verify">
-        <action
-            android:id="@+id/action_connectid_phone_verify_to_connectid_pin"
-            app:destination="@id/connectid_pin"
-            app:popUpTo="@id/connectid_phone_verify" />
-        <action
-            android:id="@+id/action_connectid_phone_verify_to_connectid_biometric_config"
-            app:destination="@id/connectid_biometric_config"
-            app:popUpTo="@id/connectid_phone_verify" />
-        <action
-            android:id="@+id/action_connectid_phone_verify_to_connectid_password"
-            app:destination="@id/connectid_password"
-            app:popUpTo="@id/connectid_phone_verify" />
+        tools:layout="@layout/screen_personalid_phone_verify">
         <action
             android:id="@+id/action_connectid_phone_verify_to_connectid_message"
-            app:destination="@id/connectid_message"
-            app:popUpTo="@id/connectid_phone_verify" />
-        <action
-            android:id="@+id/action_connectid_phone_verify_self"
-            app:destination="@id/connectid_phone_verify"
-            app:popUpTo="@id/connectid_phone_verify" />
-        <action
-            android:id="@+id/action_connectid_phone_verify_to_connectid_signup_fragment"
-            app:destination="@id/connectid_signup_fragment" />
+            app:destination="@id/personalid_message_display"
+            app:popUpTo="@id/personalid_otp_page" />
         <argument
             android:name="callingClass"
             app:argType="integer"
@@ -96,47 +60,33 @@
             android:name="deactivateButton"
             app:argType="boolean" />
         <action
-            android:id="@+id/action_connectid_phone_verify_to_connectid_user_deactivate_otp_verify"
-            app:destination="@id/connectid_user_deactivate_otp_verify" />
+            android:id="@+id/action_personalid_otp_page_to_personalid_name"
+            app:destination="@id/personalid_name" />
         <action
-            android:id="@+id/action_connectid_phone_verify_to_connectid_signup_fragment2"
-            app:destination="@id/connectid_signup_fragment" />
-        <action
-            android:id="@+id/action_connectid_phone_verify_to_connectid_phoneNo"
-            app:destination="@id/connectid_phoneNo" />
+            android:id="@+id/action_personalid_otp_page_to_personalid_phone_fragment"
+            app:destination="@id/personalid_phone_fragment" />
     </fragment>
 
-    <dialog
-        android:id="@+id/connectid_message"
+    <fragment
+        android:id="@+id/personalid_message_display"
         android:name="org.commcare.fragments.connectId.ConnectIdMessageFragment"
         android:label="fragment_connectid_message"
-        tools:layout="@layout/screen_connect_message">
+        tools:layout="@layout/screen_personalid_message">
         <action
             android:id="@+id/action_connectid_message_to_connectid_biometric_config"
-            app:destination="@id/connectid_biometric_config"
-            app:popUpTo="@id/connectid_message" />
+            app:destination="@id/personalid_biometric_config"
+            app:popUpTo="@id/personalid_message_display" />
         <action
             android:id="@+id/action_connectid_message_to_connectid_pin"
-            app:destination="@id/connectid_pin"
-            app:popUpTo="@id/connectid_message" />
-        <action
-            android:id="@+id/action_connectid_message_to_connectid_password"
-            app:destination="@id/connectid_password"
-            app:popUpTo="@id/connectid_message" />
+            app:destination="@id/personalid_backup_code"
+            app:popUpTo="@id/personalid_message_display" />
         <action
             android:id="@+id/action_connectid_message_to_connectid_phone_verify"
-            app:destination="@id/connectid_phone_verify"
-            app:popUpTo="@id/connectid_message" />
-        <action
-            android:id="@+id/action_connectid_message_to_connectid_user_deactivate_otp_verify"
-            app:destination="@id/connectid_user_deactivate_otp_verify"
-            app:popUpTo="@id/connectid_message" />
+            app:destination="@id/personalid_otp_page"
+            app:popUpTo="@id/personalid_message_display" />
         <action
             android:id="@+id/action_connectid_message_self"
-            app:destination="@id/connectid_message" />
-        <action
-            android:id="@+id/action_connectid_message_to_connectid_secondary_phone_fragment"
-            app:destination="@id/connectid_secondary_phone_fragment" />
+            app:destination="@id/personalid_message_display" />
         <argument
             android:name="title"
             app:argType="string" />
@@ -166,32 +116,21 @@
             android:name="isCancellable"
             android:defaultValue="true"
             app:argType="boolean" />
-    </dialog>
+    </fragment>
 
     <fragment
-        android:id="@+id/connectid_pin"
-        android:name="org.commcare.fragments.connectId.ConnectIdPinFragment"
+        android:id="@+id/personalid_backup_code"
+        android:name="org.commcare.fragments.connectId.PersonalIdPinFragment"
         android:label="fragment_connectid_pin"
         tools:layout="@layout/fragment_recovery_code">
         <action
-            android:id="@+id/action_connectid_pin_to_connectid_phone_verify"
-            app:destination="@id/connectid_phone_verify"
-            app:popUpTo="@id/connectid_pin" />
-        <action
             android:id="@+id/action_connectid_pin_to_connectid_message"
-            app:destination="@id/connectid_message"
-            app:popUpTo="@id/connectid_pin" />
+            app:destination="@id/personalid_message_display"
+            app:popUpTo="@id/personalid_backup_code" />
         <action
             android:id="@+id/action_connectid_pin_self"
-            app:destination="@id/connectid_pin"
-            app:popUpTo="@id/connectid_pin" />
-        <action
-            android:id="@+id/action_connectid_pin_to_connectid_password"
-            app:destination="@id/connectid_password"
-            app:popUpTo="@id/connectid_pin" />
-        <action
-            android:id="@+id/action_connectid_pin_to_connectid_secondary_phone_fragment"
-            app:destination="@id/connectid_secondary_phone_fragment" />
+            app:destination="@id/personalid_backup_code"
+            app:popUpTo="@id/personalid_backup_code" />
         <argument
             android:name="callingClass"
             app:argType="integer"
@@ -212,50 +151,13 @@
             android:name="change"
             android:defaultValue="false"
             app:argType="boolean" />
-        <action
-            android:id="@+id/action_connectid_pin_to_connectid_signup_fragment"
-            app:destination="@id/connectid_signup_fragment" />
     </fragment>
 
     <fragment
-        android:id="@+id/connectid_password"
-        android:name="org.commcare.fragments.connectId.ConnectIdPasswordVerificationFragment"
-        android:label="fragment_connectid_password"
-        tools:layout="@layout/screen_connect_password_verify">
-        <action
-            android:id="@+id/action_connectid_password_to_connectid_message"
-            app:destination="@id/connectid_message"
-            app:popUpTo="@id/connectid_password" />
-        <action
-            android:id="@+id/action_connectid_password_to_connectid_phone_verify"
-            app:destination="@id/connectid_phone_verify"
-            app:popUpTo="@id/connectid_password" />
-        <action
-            android:id="@+id/action_connectid_password_to_connectid_pin"
-            app:destination="@id/connectid_pin"
-            app:popUpTo="@id/connectid_password" />
-        <argument
-            android:name="phone"
-            app:argType="string"
-            app:nullable="true" />
-        <argument
-            android:name="secret"
-            app:argType="string"
-            app:nullable="true" />
-        <argument
-            android:name="callingClass"
-            app:argType="integer"
-            app:nullable="false" />
-        <action
-            android:id="@+id/action_connectid_password_to_connectid_signup_fragment"
-            app:destination="@id/connectid_signup_fragment" />
-    </fragment>
-
-    <fragment
-        android:id="@+id/connectid_signup_fragment"
-        android:name="org.commcare.fragments.connectId.ConnectIDSignupFragment"
-        android:label="fragment_connectid_signup_fragment"
-        tools:layout="@layout/fragment_signup">
+        android:id="@+id/personalid_phone_fragment"
+        android:name="org.commcare.fragments.connectId.PersonalIdPhoneFragment"
+        android:label="fragment_personalid_phone_fragment"
+        tools:layout="@layout/screen_personalid_phoneno">
         <argument
             android:name="callingClass"
             android:defaultValue="1002"
@@ -266,82 +168,23 @@
             app:argType="string"
             app:nullable="true" />
         <action
-            android:id="@+id/action_connectid_phone_fragment_to_connectid_phone_not_available"
-            app:destination="@id/connectid_phone_not_available" />
-        <action
-            android:id="@+id/action_connectid_phone_fragment_to_connectid_biometric_config"
-            app:destination="@id/connectid_biometric_config" />
-        <action
             android:id="@+id/action_connectid_phone_fragment_to_connectid_message"
-            app:destination="@id/connectid_message" />
+            app:destination="@id/personalid_message_display" />
         <action
-            android:id="@+id/action_connectid_phone_fragment_to_connectid_password"
-            app:destination="@id/connectid_password" />
-        <action
-            android:id="@+id/action_connectid_phone_fragment_to_connectid_pin"
-            app:destination="@id/connectid_pin" />
-        <action
-            android:id="@+id/action_connectid_signup_fragment_self"
-            app:destination="@id/connectid_signup_fragment" />
-        <action
-            android:id="@+id/action_connectid_signup_fragment_to_connectid_secondary_phone_fragment"
-            app:destination="@id/connectid_secondary_phone_fragment" />
+            android:id="@+id/action_personalid_phone_fragment_to_personalid_biometric_config"
+            app:destination="@id/personalid_biometric_config" />
     </fragment>
 
-    <fragment
-        android:id="@+id/connectid_secondary_phone_fragment"
-        android:name="org.commcare.fragments.connectId.ConnectIDSecondaryPhoneNumber"
-        android:label="connectid_secondary_phone_fragment"
-        tools:layout="@layout/fragment_secondary_phone_number">
-        <action
-            android:id="@+id/action_connectid_secondary_phone_fragment_to_connectid_phone_verify"
-            app:destination="@id/connectid_phone_verify" />
-        <action
-            android:id="@+id/action_connectid_secondary_phone_fragment_to_connectid_message"
-            app:destination="@id/connectid_message" />
-        <action
-            android:id="@+id/action_connectid_secondary_phone_fragment_to_connectid_pin"
-            app:destination="@id/connectid_pin" />
-        <argument
-            android:name="callingClass"
-            app:argType="integer"
-            app:nullable="false" />
-    </fragment>
+
 
     <fragment
-        android:id="@+id/connectid_user_deactivate_otp_verify"
-        android:name="org.commcare.fragments.connectId.ConnectIdUserDeactivateOTPVerificationFragment"
-        android:label="fragment_connectid_user_deactivate_otp_verify"
-        tools:layout="@layout/screen_connect_user_deactivate_otp_verify">
-        <action
-            android:id="@+id/action_connectid_user_deactivate_otp_verify_to_connectid_message"
-            app:destination="@id/connectid_message" />
-        <argument
-            android:name="primaryPhone"
-            app:argType="string"
-            app:nullable="true" />
-        <argument
-            android:name="username"
-            app:argType="string"
-            app:nullable="true" />
-        <argument
-            android:name="password"
-            app:argType="string"
-            app:nullable="true" />
-    </fragment>
+        android:id="@+id/personalid_name"
+        android:name="org.commcare.fragments.connectId.PersonalIdNameFragment"
+        android:label="personalid_name"
+        tools:layout="@layout/personalid_name_fragment">
 
-    <fragment
-        android:id="@+id/connectid_phoneNo"
-        android:name="org.commcare.fragments.connectId.ConnectIdPhoneFragment"
-        android:label="fragment_connectid_phoneNo"
-        tools:layout="@layout/screen_connect_primary_phone">
         <action
-            android:id="@+id/action_connectid_phoneNo_to_connectid_phone_verify"
-            app:destination="@id/connectid_phone_verify"
-            app:popUpTo="@id/connectid_phoneNo" />
-        <argument
-            android:name="phone"
-            app:argType="string"
-            app:nullable="true" />
+            android:id="@+id/action_personalid_name_to_personalid_backup_code"
+            app:destination="@id/personalid_backup_code" />
     </fragment>
 </navigation>
